<resources>
    <string name="app_name">Quiz_Using_SQlite</string>
    <string name="app_title">My Practice Quiz</string>
    <string name="text_view_text1">My Practice Quiz</string>
    <string name="start_quiz_text">Start Quiz</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur \nLorem ipsum dolor sit amet, consectetur \nLorem ipsum dolor sit amet, consectetur</string>
    <string name="highscore_text">Highscore: 0</string>
    <string name="score_text">Score: 0</string>
    <string name="question_count_text">Question: 1/x</string>
    <string name="difficulty_text">Difficulty: ?</string>
    <string name="timer">00:30</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="confirm_label">Confirm</string>
    <string name="ans1_correct">Answer 1 is correct!</string>
    <string name="ans2_correct">Answer 2 is correct!</string>
    <string name="ans3_correct">Answer 3 is correct!</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="forward_slash">/</string>
    <string name="space" />
</resources>
