<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:padding="16dp"
    tools:context="com.example.fraziered.quiz_using_sqlite.QuizActivity">
    <!--tools:context=".QuizActivity"-->

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@id/text_view_score"
        android:layout_toLeftOf="@id/text_view_score"
        android:freezesText="true"
        android:text="@string/score_text"
        android:textColor="@android:color/black" />
    <!--android:freezesText="true" will store the text values when the orientation is changed.-->
    <!--I was unaware of this, so I handled the issue of storing the text values using code.-->
    <!--Using freezesText is much easier.-->

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_score"
        android:layout_toStartOf="@id/text_view_question_count"
        android:layout_toLeftOf="@id/text_view_question_count"
        android:freezesText="true"
        android:text="@string/question_count_text"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/text_view_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_question_count"
        android:layout_toStartOf="@id/text_view_difficulty"
        android:layout_toLeftOf="@id/text_view_difficulty"
        android:freezesText="true"
        android:text="@string/difficulty_text"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_toStartOf="@id/text_view_countdown"
        android:layout_toLeftOf="@id/text_view_countdown"
        android:freezesText="true"
        android:text="@string/timer"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radio_group"
        android:layout_below="@+id/text_view_countdown"
        android:layout_alignStart="@id/text_view_difficulty"
        android:layout_alignLeft="@id/text_view_difficulty"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="6dp"
        android:layout_toStartOf="@id/text_view_difficulty"
        android:layout_toLeftOf="@id/text_view_difficulty"
        android:layout_toEndOf="@id/text_view_countdown"
        android:layout_toRightOf="@id/text_view_countdown"
        android:freezesText="true"
        android:text="@string/lorem_ipsum"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_view_score"
        android:layout_alignLeft="@+id/text_view_score"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="false"
        android:layout_marginBottom="60dp">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:freezesText="true"
            android:text="@string/option_1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:freezesText="true"
            android:text="@string/option_2"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:freezesText="true"
            android:text="@string/option_3"
            android:textAlignment="center"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="false"
        android:background="@color/buttonColor"
        android:freezesText="true"
        android:text="@string/confirm_label"
        android:textSize="25sp" />

</RelativeLayout>