<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:padding="16dp"
    tools:context="com.example.fraziered.quiz_using_sqlite.MainActivity">
    <!--tools:context=".MainActivity"-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/text_view_text1"
        android:textColor="@android:color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text_view_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/highscore_text"
        android:textSize="30sp" />


    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_highscore"
        android:layout_alignStart="@id/text_view_highscore"
        android:layout_alignEnd="@id/text_view_highscore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_alignLeft="@id/text_view_highscore"
        android:layout_alignRight="@id/text_view_highscore" />

    <!--android:layout_above="@id/button_start_quiz"-->

    <Spinner
        android:id="@+id/spinner_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_category"
        android:layout_alignStart="@id/text_view_highscore"
        android:layout_alignEnd="@id/text_view_highscore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_alignLeft="@id/text_view_highscore"
        android:layout_alignRight="@id/text_view_highscore" />

    <Button
        android:id="@+id/button_start_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/buttonColor"
        android:text="@string/start_quiz_text"
        android:textSize="30sp" />

</RelativeLayout>